--- a/frontend/src/app/theme/layout/admin/nav-bar/nav-right/nav-right.component.html
+++ b/frontend/src/app/theme/layout/admin/nav-bar/nav-right/nav-right.component.html
@@ -11,58 +11,23 @@
           </div>
         </div>
         <ul class="notification-body">
-          <li class="n-title">
-            <p class="m-b-0">NEW</p>
-          </li>
-          <li class="notification">
+          <li *ngFor="let n of notifications" class="notification">
             <div class="d-flex">
-              <img class="img-radius" src="assets/images/user/avatar-1.jpg" alt="Generic placeholder image" />
+              <img class="img-radius" src="assets/images/user/avatar-1.jpg" alt="Notification" />
               <div class="flex-grow-1">
                 <p>
-                  <strong>John Doe</strong>
+                  <strong>{{ n.title }}</strong>
                   <span class="n-time text-muted">
                     <i class="icon feather icon-clock m-r-10"></i>
-                    now
+                    {{ n.time }}
                   </span>
                 </p>
-                <p>New ticket Added</p>
-              </div>
-            </div>
-          </li>
-          <li class="n-title">
-            <p class="m-b-0">EARLIER</p>
-          </li>
-          <li class="notification">
-            <div class="d-flex">
-              <img class="img-radius" src="assets/images/user/avatar-2.jpg" alt="Generic placeholder image" />
-              <div class="flex-grow-1">
-                <p>
-                  <strong>Joseph William</strong>
-                  <span class="n-time text-muted">
-                    <i class="icon feather icon-clock m-r-10"></i>
-                    10 min
-                  </span>
-                </p>
-                <p>Prchace New Theme and make payment</p>
-              </div>
-            </div>
-          </li>
-          <li class="notification">
-            <div class="d-flex">
-              <img class="img-radius" src="assets/images/user/avatar-3.jpg" alt="Generic placeholder image" />
-              <div class="flex-grow-1">
-                <p>
-                  <strong>Sara Soudein</strong>
-                  <span class="n-time text-muted">
-                    <i class="icon feather icon-clock m-r-10"></i>
-                    30 min
-                  </span>
-                </p>
-                <p>currently login</p>
+                <p>{{ n.message }}</p>
               </div>
             </div>
           </li>
         </ul>
+
         <div class="notification-footer">
           <a href="javascript:">show all</a>
         </div>
