--- a/frontend/src/app/theme/layout/admin/navigation/nav-logo/nav-logo.component.html
+++ b/frontend/src/app/theme/layout/admin/navigation/nav-logo/nav-logo.component.html
@@ -1,9 +1,9 @@
 <div class="">
   <a [routerLink]="['/dashboard/default/']" class="b-brand">
-    <div class="b-bg">
-      <i class="feather icon-trending-up"></i>
+    <div class="">
+      <i class=""></i>
     </div>
-    <span class="b-title">Datta Able</span>
+    <span class="b-title" style="font-size: 1.5rem; font-weight: bold ; color:#B53737">invest immo</span>
   </a>
   <a href="javascript:" class="mobile-menu" [ngClass]="{ on: navCollapsed }" id="mobile-collapse" (click)="navCollapse()"><span></span></a>
 </div>
